--- a/package.json
+++ b/package.json
@@ -11,9 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@devsnowflake/youtube-dl-exec": "^1.0.2",
     "@discordjs/builders": "^0.6.0",
+    "@discordjs/opus": "^0.5.3",
     "@discordjs/rest": "^0.1.0-canary.0",
+    "@discordjs/voice": "^0.6.0",
     "discord-api-types": "^0.22.0",
-    "discord.js": "^13.1.0"
+    "discord.js": "^13.1.0",
+    "ffmpeg-static": "^4.4.0",
+    "libsodium-wrappers": "^0.7.9",
+    "tweetnacl": "^1.0.3",
+    "youtube-dl-exec": "^1.2.4",
+    "ytdl-core": "^4.9.1"
   }
 }
